--- a/index03.html
+++ b/index03.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="Root"></div>
-    <script src="./script.js"></script>5
+    <script src="./script03.js"></script>5
 </body>
 
 </html>
