--- a/index02.html
+++ b/index02.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>document</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <script src='script02.js'></script>
 </head>
 
-<body>
-    <div id="Root"></div>
-    <script src="./script.js"></script>5
+<body></body>
+
 </body>
 
 </html>
